--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script type="text/javascript" src="/src/wasm/runner.js"></script>
+    <!-- <script type="text/javascript" src="/src/wasm/ngspice.js"></script> -->
   </body>
 </html>
