feat: update script for build

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
-  <script id="runner" type="text/javascript" src="/src/models/wasm/runner.js"></script>
+  <script id="runner" type="text/javascript" src="/public/wasm/runner.js"></script>
   <!-- <script type="text/javascript" src="/src/wasm/ngspice.js"></script> -->
 </body>
 
